-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7
-
Component/s: client-libs
-
b25
-
generic, x86
-
generic, windows_xp
-
Not verified
java/awt/Focus/AutoRequestFocusTest/AutoRequestFocusSetVisibleTest.java fails on jdk7_b15 PIT build on windows platform. This regression testcase checks for the new functionality to the focus mechanism along with some changes. This fix(RFE) have touched all the shared & native code for all the platform.
I have attached the log for the same.
I have attached the log for the same.
- duplicates
-
JDK-6641929 test/java/awt/Focus/AutoRequestFocusTest/AutoRequestFocusSetVisibleTest.java fails on JDK7b23
-
- Closed
-
- relates to
-
JDK-6187066 Want to open a Frame without activating it
-
- Closed
-