6567410: PIT : java/awt/Focus/AutoRequestFocusTest/AutoRequestFocusSetVisibleTest.java fails

A filter flag has been added to the HCBT focus hook.

Reviewed-by: dcherepanov